Fix T63587: 3D View clipping region crashes